JP GENERATION - BUILDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
@@ -134,7 +134,7 @@
             <p class="con-ser-p">Pri nastavení cieľov je potrebné sa zamyslieť či sú krátkodobé alebo dlhodobé. Pri výbere stratégie je to veľmi dôležite či bude trvať 1 mesiac alebo 1 rok…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-laptop" id="con-ser-icon5"></i>
+            <i aria-hidden="true" class="fa-solid fa-tablet-screen-button" id="con-ser-icon5"></i>
             <h3>Nastavenie stratégie</h3>
             <p class="con-ser-p">Nastavenie marketingovej, biznisovej a digitálnej kampane priamo pre Vaše potreby…</p>
         </div>
