--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -113,37 +113,37 @@
             <p class="con-ser-p">Udalosť na ktorú nechcete zabudnúť? Spomienka na párty kde sa Vaši zákazníci bavili? Svadba ktorá sa väčšinou koná len raz za život? S nami na ňu určite nezabudnete…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-calendar" id="con-ser-icon2"></i>
+            <i aria-hidden="true" class="fa-regular fa-calendar-days" id="con-ser-icon2"></i>
             <h3>Firemná akcia</h3>
             <p class="con-ser-p">Firemný večierok alebo team building? Ukážte svojim zákazníkom že popri tom všetkom sa staráte dobre aj o svojich zamestnancov…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-shopping-cart" id="con-ser-icon3"></i>
+            <i aria-hidden="true" class="fa-solid fa-shirt" id="con-ser-icon3"></i>
             <h3>Produkt</h3>
             <p class="con-ser-p">Chceme rozbehnúť alebo vlastníme e-shop no fotky z mobilu nedodávajú tomu ten správny efekt? Každý jeden zákazník chce vedieť detailne čo kupuje preto to nepodceňte…</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
-            <i aria-hidden="true" class="fa fa-building-o" id="con-ser-icon4"></i>
+            <i aria-hidden="true" class="fa-solid fa-building" id="con-ser-icon4"></i>
             <h3>Priestor</h3>
             <p class="con-ser-p">Prenajímate alebo predávate byt, dom, kancelárske priestory? Otvárate novú reštauráciu alebo bar? Poskytnite zákazníkom zážitok ešte pred prvým vstupom…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-users" id="con-ser-icon5"></i>
+            <i aria-hidden="true" class="fa-solid fa-people-group" id="con-ser-icon5"></i>
             <h3>Ľudia</h3>
             <p class="con-ser-p">Potrebujete profesionálne fotky pre Vašich zamestnancov? Chceli by ste nový portrét
                 alebo profilovú fotografiu? V pohodlí ateliéru to spolu dokážeme…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-television" id="con-ser-icon6"></i>
+            <i aria-hidden="true" class="fa-solid fa-display" id="con-ser-icon6"></i>
             <h3>Reklama</h3>
             <p class="con-ser-p">Vyčerpali ste databázu fotiek pre Vašu reklamu alebo sociálnu sieť? Poďme na to…</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
-            <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
+            <i aria-hidden="true" class="fa-solid fa-rotate" id="con-ser-icon7"></i>
             <h3>360° fotografia</h3>
             <p class="con-ser-p">Chcete poskytnúť svojim zákazníkom lepší zážitok a detail z prezerania produktu?
                 Veľkostné maximálne do 60 x 60 x 50 cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný
