--- a/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
@@ -108,17 +108,17 @@
     </div>
     <section class="content-ser-1">
         <div>
-            <i aria-hidden="true" class="fa fa-google-wallet" id="con-ser-icon1"></i>
+            <i aria-hidden="true" class="fa-brands fa-google-drive" id="con-ser-icon1"></i>
             <h3>Logo</h3>
             <p class="con-ser-p">Unikátne logo pre Vaše podnikanie. Nemusí to byť len obyčajný text…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-bolt" id="con-ser-icon2"></i>
+            <i aria-hidden="true" class="fa-solid fa-bolt-lightning" id="con-ser-icon2"></i>
             <h3>Firemná identita</h3>
             <p class="con-ser-p">Návrh celej identity firmy. Logo a jeho používanie, font písma, vizitka, web, sociálne siete, cenník. Záleží na tom v akej sfére podnikáte…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-picture-o" id="con-ser-icon3"></i>
+            <i aria-hidden="true" class="fa-brands fa-adversal" id="con-ser-icon3"></i>
             <h3>Reklama</h3>
             <p class="con-ser-p">Spracovanie reklamy pre internet, billboard alebo televíziu jednoducho všetko čo Vaša
                 kampaň vyžaduje…</p>
@@ -131,7 +131,7 @@
             <p class="con-ser-p">Spracujeme všetky podklady pre tlač a na Vás zostane už len realizácia…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-share-square-o" id="con-ser-icon5"></i>
+            <i aria-hidden="true" class="fa-solid fa-share-nodes" id="con-ser-icon5"></i>
             <h3>Sociálna identita</h3>
             <p class="con-ser-p">Vzhľad Vašich sociálnych sieti je podstatný pre nadobudnutie nových sledovateľov. Preto nepodceňte svoju identitu…</p>
         </div>
@@ -143,12 +143,12 @@
     </section>
     <section class="content-ser-3">
         <div>
-            <i aria-hidden="true" class="fa fa-file-image-o" id="con-ser-icon7"></i>
+            <i aria-hidden="true" class="fa-regular fa-images" id="con-ser-icon7"></i>
             <h3>Úprava fotografie</h3>
             <p class="con-ser-p">Máte surové fotky bez úpravy a neviete čo s nimi? Máte roztrhnutú fotku v tlačovej podobe? Nechajte to na nás s týmto všetkým si dokážeme poradiť…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-file-image-o" id="con-ser-icon8"></i>
+            <i aria-hidden="true" class="fa-brands fa-figma" id="con-ser-icon8"></i>
             <h3>Web dizajn</h3>
             <p class="con-ser-p">Vytvoríme Vám vzhľad Vášho budúceho webu. V prípade že web chcete spustiť vo vlastnej réžií…</p>
         </div>
