--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -108,12 +108,12 @@
     </div>
     <section class="content-ser-1">
         <div>
-            <i aria-hidden="true" class="fa fa-shopping-basket" id="con-ser-icon1"></i>
+            <i aria-hidden="true" class="fa-solid fa-cart-shopping" id="con-ser-icon1"></i>
             <h3>Máme vlastnú domenu</h3>
             <p class="con-ser-p">Maté vlastnú domenu? Neviete ako ju spravovať? Nevadi urobime to za Vás…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-server" id="con-ser-icon2"></i>
+            <i aria-hidden="true" class="fa-solid fa-database" id="con-ser-icon2"></i>
             <h3>Máme vlastný hosting</h3>
             <p class="con-ser-p">Po spustený webu Vám zanechali prihlasovacie údaje a nevie čo s tým? Každé jedno
                 nastavenie je pre Vás neznáme? Nechajte to na Nás…</p>
