--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -108,7 +108,7 @@
     </div>
     <section class="content-ser-1">
         <div>
-            <i aria-hidden="true" class="fa fa-shopping-cart" id="con-ser-icon1"></i>
+            <i aria-hidden="true" class="fa-solid fa-credit-card" id="con-ser-icon1"></i>
             <h3>Zakúpenie vlastnej domeny</h3>
             <p class="con-ser-p">Doména je vaša adresa na internete. Môže sa stať adresou vašej webstránky alebo smerovať na iný web, či profil na sociálnej sieti… (.sk, .online, .eu, .com, .store…)</p>
         </div>
@@ -137,7 +137,7 @@
             <p class="con-ser-p">Správne nastavenie je základ aby všetko fungovalo ako má…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-television" id="con-ser-icon6"></i>
+            <i aria-hidden="true" class="fa-solid fa-laptop-code" id="con-ser-icon6"></i>
             <h3>Dizajn</h3>
             <p class="con-ser-p">Vzhľad Vášho webu môže vyzerať ako len chcete…</p>
         </div>
@@ -157,25 +157,25 @@
             <p class="con-ser-p">Ochrana Vášho webu proti ukradnutiu dôležitých dát používateľov…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-pie-chart" id="con-ser-icon9"></i>
+            <i aria-hidden="true" class="fa-solid fa-cookie-bite" id="con-ser-icon9"></i>
             <h3>GDPR a cookie súbory</h3>
             <p class="con-ser-p">Keďže na niektoré úkony musíš dostať súhlas od zákazníka alebo používateľa webu. Nastavíme to tak aby oba strany boli spokojné…</p>
         </div>
     </section>
     <section class="content-ser-4">
         <div>
-            <i aria-hidden="true" class="fa fa-check-square-o" id="con-ser-icon10"></i>
+            <i aria-hidden="true" class="fa-solid fa-terminal" id="con-ser-icon10"></i>
             <h3>Posledný test a sme online</h3>
             <p class="con-ser-p">Posledná skúška aby sme Vám odovzdali 100% produkt…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-user-secret" id="con-ser-icon11"></i>
+            <i aria-hidden="true" class="fa-regular fa-handshake" id="con-ser-icon11"></i>
             <h3>Odovzdanie webu</h3>
             <span class="spacer2"></span>
             <p class="con-ser-p">Odovzdáme Vám všetky potrebné prihlasovacie údaje na správu Vášho webu…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-volume-control-phone" id="con-ser-icon12"></i>
+            <i aria-hidden="true" class="fa-solid fa-headset" id="con-ser-icon12"></i>
             <h3>Podpora</h3>
             <span class="spacer2"></span>
             <p class="con-ser-p">V prípade že správu domény a hostingu necháte na nás. Tak sme tu pre Vás 24/7 pri
