--- a/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
@@ -256,7 +256,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
