JP GENERATION - BUILDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
@@ -113,6 +113,122 @@
     <div class="con-look">
         <span>Cena za váš wordpress web</span>
     </div>
+    <section class="content-price-1">
+        <div class="block-black">
+            <h2>Firemná web stránka</h2>
+            <p class="min-order">4-6 Podstránok</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Moderný dizajn podľa vašich predstáv</li>
+                <li class="price-text">Responzivita</li>
+                <li class="price-text">Galéria obrázkov</li>
+                <li class="price-text">SEO optimalizácia</li>
+                <li class="price-text">Kontaktný formulár</li>
+                <li class="price-text">Interaktívna mapa</li>
+                <li class="price-text">Cookies notifikácia</li>
+                <li class="price-text">Vloženie webu do Google</li>
+                <li class="price-text">Integrácia sociálnych médií</li>
+                <li class="price-text">Zabezpečenie webu</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">Od 730€</p>
+            </div>
+        </div>
+        <div class="block-gray">
+            <h2>Mikro web stránka</h2>
+            <p class="min-order">1-3 Podstránky</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Moderný dizajn podľa vašich predstáv</li>
+                <li class="price-text">Responzivita</li>
+                <li class="price-text">Galéria obrázkov</li>
+                <li class="price-text">SEO optimalizácia</li>
+                <li class="price-text">Kontaktný formulár</li>
+                <li class="price-text">Interaktívna mapa</li>
+                <li class="price-text">Cookies notifikácia</li>
+                <li class="price-text">Vloženie webu do Google</li>
+                <li class="price-text">Integrácia sociálnych médií</li>
+                <li class="price-text">Zabezpečenie webu</li>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">Od 480€</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Business web stránka</h2>
+            <p class="min-order">Unikátna stránka na mieru</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Riešenia šité na mieru podľa vašich predstáv</li>
+                <li class="price-text">Responzivita</li>
+                <li class="price-text">Výhody firemného webu</li>
+                <li class="price-text">Grafický návrh webu</li>
+                <li class="price-text">Back-end funkcionalita</li>
+                <li class="price-text">Ajax filtre</li>
+                <li class="price-text">Pokročilý blog</li>
+                <li class="price-text">Vloženie webu do Google</li>
+                <li class="price-text">Príprava pre FB reklamu</li>
+                <li class="price-text">Analytika návštevnosti</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">Od 980€</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-2">
+        <div class="block-gray">
+            <h2>E – shop</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">Podľa požiadaviek</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Moderný dizajn podľa vašich predstáv</li>
+                <li class="price-text">Responzivita</li>
+                <li class="price-text">Výhody firemného webu</li>
+                <li class="price-text">Platobná brána</li>
+                <li class="price-text">Dizajn produktových kariet</li>
+                <li class="price-text">Back-end funkcionalita</li>
+                <li class="price-text">Import produktov</li>
+                <li class="price-text">Možnosť registrácie</li>
+                <li class="price-text">Integrácia sociálnych médií</li>
+                <li class="price-text">Analytika návštevnosti</li>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">Od 1400€</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Web stránka zo šablóny</h2>
+            <p class="min-order">Podľa požiadaviek</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Dizajn podľa zakúpenej šablóny</li>
+                <li class="price-text">SEO optimalizácia</li>
+                <li class="price-text">Kontaktný formulár</li>
+                <li class="price-text">Interaktívna mapa</li>
+                <li class="price-text">Cookies notifikácia</li>
+                <li class="price-text">Vloženie webu do Google</li>
+                <li class="price-text">Integrácia sociál. médií</li>
+                <li class="price-text">Zabezpečenie webu</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-gray">
+                <p class="price-eur">Od 380€</p>
+            </div>
+        </div>
+        <div class="block-transparent">
+            <h2></h2>
+            <p class="min-order"></p>
+            <p class="order-text"></p>
+        </div>
+    </section>
 </section>
 <br>
 <br>
@@ -259,4 +375,6 @@
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
+
+
 
