--- a/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
@@ -113,6 +113,167 @@
     <div class="con-look">
         <span>Cena za vašu správu domény a hostingu</span>
     </div>
+    <section class="content-price-1">
+        <div class="block-black">
+            <h2>Správa domeny a hostingu</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Bezstarostný chod domeny a hostingu</li>
+                <li class="price-text">Oprava neočakávaných chýb</li>
+                <li class="price-text">Úprava a pridávanie obsahu</li>
+                <li class="price-text">Pravidelná záloha dát</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-gray">
+            <h2>Optimalizácia webu</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Optimalizácia one-page faktorov</li>
+                <li class="price-text">Optimalizácia off-page faktorov</li>
+                <li class="price-text">Analýza kľúčových slov a alt textov</li>
+                <li class="price-text">Kontrola funkčnosti stránky (odkazy, tlačidla…)</li>
+                <li class="price-text">Kontrola responzívneho dizajnu</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-black">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Optimalizácia servera</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Zníženie zaťaženia servera</li>
+                <li class="price-text">Skrátenie odpovede servera</li>
+                <li class="price-text">Zredukovanie nepouživaného CSS a JAVASCRIPT</li>
+                <li class="price-text">Konvertovanie obrazkov na WebP</li>
+                <li class="price-text">Povolenie ukladania do vyrovnávacej pamäte</li>
+                <li class="price-text">Zabránenie nadmerným sieťovým prenosom dát</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-2">
+        <div class="block-gray">
+            <h2>Kontrola zabezpečenia</h2>
+            <p class="min-order">Dohodou<br><br><br></p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Kontrola SSL certifikátu</li>
+                <li class="price-text">Sken výrusov</li>
+                <li class="price-text">Kontrola DNSSEC</li>
+                <li class="price-text">Kontrola IPv</li>
+                <li class="price-text">Kontrola serverových logov</li>
+                <li class="price-text">Odstránenie spamu</li>
+                <li class="price-text">Odstránenie backdoor a phishingových skriptov</li>
+                <li class="price-text">Kontrola GDPR a Cookie</li>
+                <li class="price-text">Odstránenie škodlivého kódu</li>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Prenos domeny a hostingu</h2>
+            <p class="min-order">V prípade že Váš hosting to už nestíha alebo chcete meniť názov domeny</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Výber kvalitnejšieho hostingu pre Vašu potrebu</li>
+                <li class="price-text">Zmena názvu alebo prechod na .eu, .sk, .store…</li>
+                <li class="price-text">Záloha dát pred prenosom</li>
+                <li class="price-text">Bezproblémový prenos</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-gray">
+            <h2>Vytvorenie subdomeny</h2>
+            <p class="min-order">Expanzia do zahraničia alebo testovací web<br><br></p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Skopírovanie aktuálnej databázy</li>
+                <li class="price-text">Prenos databázy na subdomenu</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-black">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-3">
+        <div class="block-black">
+            <h2>KOMPLETNÝ BALÍK SLUŽIEB (A)</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Správa domeny a hostingu</li>
+                <li class="price-text">Optimalizácia webu</li>
+                <li class="price-text">Optimalizácia servera</li>
+                <li class="price-text">Kontrola zabezpečenia</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-gray">
+            <h2>KOMPLETNÝ BALÍK SLUŽIEB (B)</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Správa domeny a hostingu</li>
+                <li class="price-text">Optimalizácia webu</li>
+                <li class="price-text">Optimalizácia servera</li>
+                <li class="price-text">Kontrola zabezpečenia</li>
+                <li class="price-text">Prenos domeny a hostingu</li>
+                <li class="price-text">Podpora 24/7</li>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-transparent">
+            <h2></h2>
+            <p class="min-order"></p>
+            <p class="order-text"></p>
+        </div>
+    </section>
 </section>
 <br>
 <br>
