JP GENERATION - BUILDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
@@ -115,12 +115,12 @@
     </div>
     <section class="content-price-1">
         <div class="block-black">
-            <h2>Správa domeny a hostingu</h2>
+            <h2>Správa domény a hostingu</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Bezstarostný chod domeny a hostingu</li>
+                <li class="price-text">Bezstarostný chod domény a hostingu</li>
                 <li class="price-text">Oprava neočakávaných chýb</li>
                 <li class="price-text">Úprava a pridávanie obsahu</li>
                 <li class="price-text">Pravidelná záloha dát</li>
@@ -161,8 +161,8 @@
             <ul class="price-info">
                 <li class="price-text">Zníženie zaťaženia servera</li>
                 <li class="price-text">Skrátenie odpovede servera</li>
-                <li class="price-text">Zredukovanie nepouživaného CSS a JAVASCRIPT</li>
-                <li class="price-text">Konvertovanie obrazkov na WebP</li>
+                <li class="price-text">Zredukovanie nepoužívaného CSS a JAVASCRIPT</li>
+                <li class="price-text">Konvertovanie obrázkov na WebP</li>
                 <li class="price-text">Povolenie ukladania do vyrovnávacej pamäte</li>
                 <li class="price-text">Zabránenie nadmerným sieťovým prenosom dát</li>
             </ul>
@@ -179,7 +179,7 @@
             <hr>
             <ul class="price-info">
                 <li class="price-text">Kontrola SSL certifikátu</li>
-                <li class="price-text">Sken výrusov</li>
+                <li class="price-text">Sken vírusov</li>
                 <li class="price-text">Kontrola DNSSEC</li>
                 <li class="price-text">Kontrola IPv</li>
                 <li class="price-text">Kontrola serverových logov</li>
@@ -193,8 +193,8 @@
             </div>
         </div>
         <div class="block-black">
-            <h2>Prenos domeny a hostingu</h2>
-            <p class="min-order">V prípade že Váš hosting to už nestíha alebo chcete meniť názov domeny</p>
+            <h2>Prenos domény a hostingu</h2>
+            <p class="min-order">V prípade že Váš hosting to už nestíha alebo chcete zmeniť názov domény</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
@@ -217,7 +217,7 @@
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Skopírovanie aktuálnej databázy</li>
+                <li class="price-text">Kopírovanie aktuálnej databázy</li>
                 <li class="price-text">Prenos databázy na subdomenu</li>
             </ul>
             <span class="spacer-price-li"></span>
@@ -235,12 +235,12 @@
     </section>
     <section class="content-price-3">
         <div class="block-black">
-            <h2>KOMPLETNÝ BALÍK SLUŽIEB (A)</h2>
+            <h2>Web balík služieb (A)</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Správa domeny a hostingu</li>
+                <li class="price-text">Správa domény a hostingu</li>
                 <li class="price-text">Optimalizácia webu</li>
                 <li class="price-text">Optimalizácia servera</li>
                 <li class="price-text">Kontrola zabezpečenia</li>
@@ -252,16 +252,16 @@
             </div>
         </div>
         <div class="block-gray">
-            <h2>KOMPLETNÝ BALÍK SLUŽIEB (B)</h2>
+            <h2>Web balík služieb (B)</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Správa domeny a hostingu</li>
+                <li class="price-text">Správa domény a hostingu</li>
                 <li class="price-text">Optimalizácia webu</li>
                 <li class="price-text">Optimalizácia servera</li>
                 <li class="price-text">Kontrola zabezpečenia</li>
-                <li class="price-text">Prenos domeny a hostingu</li>
+                <li class="price-text">Prenos domény a hostingu</li>
                 <li class="price-text">Podpora 24/7</li>
             </ul>
             <div class="btn-price-black">
@@ -420,4 +420,5 @@
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
+
 
