--- a/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
@@ -113,6 +113,99 @@
     <div class="con-look">
         <span>Cena za vašu digitálnu stratégiu</span>
     </div>
+    <section class="content-price-1">
+        <div class="block-black">
+            <h2>ANALÝZA FIRMY + REPORT</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postprodukcia fotografii</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-gray">
+            <h2>Produktové fotenie (mimo atelieru)</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postprodukcia fotografii</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Interiérové fotenie</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Cesta v rámci PO zdarma</li>
+                <li class="price-text">Úprava interiéru pred fotením</li>
+                <li class="price-text">Postprodukcia fotografií</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-2">
+        <div class="block-gray">
+            <h2>Firemná akcia <br> fotenie</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Cesta v rámci PO zdarma</li>
+                <li class="price-text">Postprodukcia fotografii</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <div class="btn-price-black">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Štúdiové fotenie portrétov (nekomerčné)</h2>
+            <p class="min-order">Dohodou</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Fotenie v ateliéri</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">Postprodukcia fotografií</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">Dohodou</p>
+            </div>
+        </div>
+        <div class="block-transparent">
+            <h2></h2>
+            <p class="min-order"></p>
+            <p class="order-text"></p>
+        </div>
+    </section>
 </section>
 <br>
 <br>
