JP GENERATION - ENDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-digitalna-strategia.html
@@ -115,49 +115,61 @@
     </div>
     <section class="content-price-1">
         <div class="block-black">
-            <h2>ANALÝZA FIRMY + REPORT</h2>
+            <h2>Analýza firmy + report</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postprodukcia fotografii</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
+                <li class="price-text">Analýza poskytovaných produktov a služieb</li>
+                <li class="price-text">Analýza slabých a silných stránok klienta</li>
+                <li class="price-text">Analýza príležitostí a rizík</li>
+                <li class="price-text">Report analýzy firmy</li>
+                <li class="price-text">Diskrétnosť</li>
             </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
             <div class="btn-price-gray">
                 <p class="price-eur">Dohodou</p>
             </div>
         </div>
         <div class="block-gray">
-            <h2>Produktové fotenie (mimo atelieru)</h2>
+            <h2>Analýza zákazníkov + report</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postprodukcia fotografii</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
+                <li class="price-text">Analýza zákazníka</li>
+                <li class="price-text">Analýza potrieb zákazníka</li>
+                <li class="price-text">Analýza zákazníka pri nákupe (čo ho motivuje a čo naopak odrádza pri nákupe)</li>
+                <li class="price-text">Report analýzy zákazníka</li>
+                <li class="price-text">Diskrétnosť</li>
             </ul>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
+            <span class="spacer-price-li"></span>
             <div class="btn-price-black">
                 <p class="price-eur">Dohodou</p>
             </div>
         </div>
         <div class="block-black">
-            <h2>Interiérové fotenie</h2>
-            <span class="spacer-price-text"></span>
+            <h2>Analýza firmy a zákazníkov + report</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Cesta v rámci PO zdarma</li>
-                <li class="price-text">Úprava interiéru pred fotením</li>
-                <li class="price-text">Postprodukcia fotografií</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
+                <li class="price-text">Analýza poskytovaných produktov a služieb</li>
+                <li class="price-text">Analýza slabých a silných stránok klienta</li>
+                <li class="price-text">Analýza príležitostí a rizík</li>
+                <li class="price-text">Analýza zákazníka</li>
+                <li class="price-text">Analýza potrieb zákazníka</li>
+                <li class="price-text">Analýza zákazníka pri nákupe (čo ho motivuje a čo naopak odrádza pri nákupe)</li>
+                <li class="price-text">Report analýzy firmy + zákazníka</li>
+                <li class="price-text">Diskrétnosť</li>
             </ul>
             <div class="btn-price-gray">
                 <p class="price-eur">Dohodou</p>
@@ -166,35 +178,42 @@
     </section>
     <section class="content-price-2">
         <div class="block-gray">
-            <h2>Firemná akcia <br> fotenie</h2>
-            <span class="spacer-price-text"></span>
+            <h2>Digitálna stratégia s krátkodobým cieľom + report</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Cesta v rámci PO zdarma</li>
-                <li class="price-text">Postprodukcia fotografii</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
+                <li class="price-text">Analýza poskytovaných produktov a služieb</li>
+                <li class="price-text">Analýza slabých a silných stránok klienta</li>
+                <li class="price-text">Analýza príležitostí a rizík</li>
+                <li class="price-text">Analýza zákazníka</li>
+                <li class="price-text">Analýza potrieb zákazníka</li>
+                <li class="price-text">Analýza zákazníka pri nákupe (čo ho motivuje a čo naopak odrádza pri nákupe)</li>
+                <li class="price-text">Report analýzy firmy + zákazníka</li>
+                <li class="price-text">Nastavenie krátkodobých cieľov</li>
+                <li class="price-text">Report pred a po dosiahnutí cieľa</li>
+                <li class="price-text">Diskrétnosť</li>
             </ul>
-            <span class="spacer-price-li"></span>
-            <span class="spacer-price-li"></span>
             <div class="btn-price-black">
                 <p class="price-eur">Dohodou</p>
             </div>
         </div>
         <div class="block-black">
-            <h2>Štúdiové fotenie portrétov (nekomerčné)</h2>
+            <h2>Digitálna stratégia s dlhodobým cieľom + report</h2>
             <p class="min-order">Dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Fotenie v ateliéri</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Profesionálny retuš</li>
-                <li class="price-text">Postprodukcia fotografií</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
+                <li class="price-text">Analýza poskytovaných produktov a služieb</li>
+                <li class="price-text">Analýza slabých a silných stránok klienta</li>
+                <li class="price-text">Analýza príležitostí a rizík</li>
+                <li class="price-text">Analýza zákazníka</li>
+                <li class="price-text">Analýza potrieb zákazníka</li>
+                <li class="price-text">Analýza zákazníka pri nákupe (čo ho motivuje a čo naopak odrádza pri nákupe)</li>
+                <li class="price-text">Report analýzy firmy + zákazníka</li>
+                <li class="price-text">Nastavenie dlhodobých cieľov</li>
+                <li class="price-text">Report pred a po dosiahnutí cieľa</li>
+                <li class="price-text">Diskrétnosť</li>
             </ul>
             <div class="btn-price-gray">
                 <p class="price-eur">Dohodou</p>
@@ -352,4 +371,3 @@
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
-
