JP GENERATION - BUILDING CUSTUMERS

--- a/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
@@ -107,6 +107,28 @@
     <div class="con-look">
         <span>Firmy alebo značky ktoré využili naše služby</span>
     </div>
+    <section class="costumers-1">
+        <div class="photo-content">
+            <img class="costumers-p" src="" alt="">
+        </div>
+        <div class="photo-content">
+            <img class="costumers-p" src="" alt="">
+        </div>
+        <div class="photo-content">
+            <img class="costumers-p" src="" alt="">
+        </div>
+    </section>
+    <section class="costumers-2">
+        <div class="photo-content">
+            <img class="costumers-p" src="" alt="">
+        </div>
+        <div class="photo-content">
+            <img class="costumers-p" src="" alt="">
+        </div>
+        <div class="photo-content">
+            <img class="costumers-p" src="" alt="">
+        </div>
+    </section>
 </section>
 <br>
 <br>
@@ -181,8 +203,6 @@
                     <i aria-hidden="true" class="fa-solid fa-envelope"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
-
-
             </div>
         </div>
     </section>
