JP GENERATION - BUILDING CUSTUMERS

--- a/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
@@ -107,26 +107,24 @@
     <div class="con-look">
         <span>Firmy alebo značky ktoré využili naše služby</span>
     </div>
-    <section class="costumers-1">
+    <section class="costumers">
         <div class="photo-content">
-            <img class="costumers-p" src="" alt="">
+            <img class="costumers-p" src="../../image/costumers/phyysio-zakaz-cover.webp" alt="Physio medical logo">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="" alt="">
+            <img class="costumers-p" src="../../image/costumers/brilia-zakaz-cover.webp" alt="Brilia logo">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="" alt="">
-        </div>
-    </section>
-    <section class="costumers-2">
-        <div class="photo-content">
-            <img class="costumers-p" src="" alt="">
+            <img class="costumers-p" src="../../image/costumers/encore-zakaz-cover.webp" alt="Encore the club logo">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="" alt="">
+            <img class="costumers-p" src="../../image/costumers/ochutnaj-zakaz-cover.webp" alt="Ochutnaj Prešov logo">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="" alt="">
+            <img class="costumers-p" src="../../image/costumers/pivarenpodhaj-zakaz-cover.webp" alt="Pivareň pod hájom logo">
+        </div>
+        <div class="photo-content">
+            <img class="costumers-p" src="../../image/costumers/kvadrat-zakaz-cover.webp" alt="Kvadra sushi logo">
         </div>
     </section>
 </section>
