JP GENERATION - TEAM BUILDING

--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -108,8 +108,14 @@
         <span>Už len jeden krok od digitálnej generácie</span>
     </div>
 </section>
-<br>
-<br>
+<!-------------FORMULAR------------->
+<section class="form">
+
+</section>
+<!-------------MAPA------------->
+<section class="google-map">
+
+</section>
 <!-------------FOOTER-------------->
 <footer>
     <section class="main">
