--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -107,6 +107,88 @@
     <div class="con-look">
         <span>Digitálna generácia založená v roku 2023</span>
     </div>
+    <section class="about-us">
+        <div class="container-about-row">
+            <div class="container-about-col">
+                <img alt="" src="../../image/about-us/web-cover-praca.webp">
+                  <div class="about-text">
+                      <div class="spacer-img-b"></div>
+                      <h3 class="about-h3">Práca</h3>
+                      <h6 class="about-h6">Našou pracou je dosiahnuť spokojnosť zákazníka v digitálnom svete</h6>
+                  </div>
+            </div>
+            <div class="container-about-col">
+                <div class="container-about-row">
+                    <img alt="" src="../../image/about-us/web-cover-fyloz.webp">
+                     <div class="about-text-2">
+                         <div class="spacer-img-b2"></div>
+                         <h3 class="about-h3">Filozofia digitálnej generácie</h3>
+                         <h6 class="about-h6">Dôvera a poctivosť sa vypláca</h6>
+                     </div>
+                </div>
+                <div class="container-about-row">
+                    <img alt="" src="../../image/about-us/web-cover-kancelaria.webp">
+                      <div class="about-text-2">
+                          <div class="spacer-img-b2"></div>
+                          <h3 class="about-h3">Digitálna kancelária</h3>
+                          <h6 class="about-h6">Nikde na planéte Zem</h6>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="who-we-are">
+        <div class="who-container">
+            <div>
+                <h4 class="who-h">KTO SME</h4>
+                <p class="who-p">Sme začínajúci web so 4 ročnou praxou služieb ktoré poskytujeme. Nie sme reklamná agentúra ani fotoštúdio jednoducho sme digitálna generácia…        </p>
+            </div>
+            <div class="border-who">
+                <h4 class="who-h">NAŠA VÍZIA</h4>
+                <p class="who-p">Posunúť digitálny svet na vyšší level.</p>
+            </div>
+            <div>
+                <h4 class="who-h">NAŠA MISIA</h4>
+                <p class="who-p">Spokojnosť a nadšenie zákazníka z odovzdanej služby od Nás.</p>
+            </div>
+        </div>
+    </section>
+</section>
+<section class="cv">
+    <header class="headline-con">
+        <div class="con-main">
+            <div class="line-con1"></div>
+            <div class="spacer"></div>
+        </div>
+        <h2>NÁŠ TÍM</h2>
+    </header>
+    <div class="con-look">
+        <span>ĽUDIA KTORÝ ZREALIZUJÚ VÁŠ PROJEKT</span>
+    </div>
+    <div class="container-cv">
+        <div class="row team-row">
+            <div>
+                <div class="team-member">
+                    <div class="team-img">
+                        <img src="../../image/about-us/founder-cover.webp" alt="">
+                        <div class="overlay">
+                            <div class="team-details">
+                                <h3 class="team-title">Jaroslav Potočný</h3>
+                                <span class="span-team">Founder</span>
+                                <div class="socials">
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                    <a href="#"><i class="fa fa-instagram"></i></a>
+                                    <a href="#"><i class="fa-regular fa-envelope"></i></a>
+                                    <a href="#"><i class="fa-solid fa-mobile-screen-button"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- end team member -->
+        </div>
+    </div>
 </section>
 <br>
 <br>
