--- a/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
@@ -464,7 +464,7 @@
         <div class="soc-an">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/jaro.potocny" target="_blank">
+                    <a href="https://www.facebook.com/people/jpgeneration/100087779516122/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -473,7 +473,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank">
+                    <a href="https://www.instagram.com/jpgeneration/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -491,7 +491,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tel:0907112358">
+                    <a href="tel:+421907112358">
                         <span></span>
                         <span></span>
                         <span></span>
