--- a/plne-responzivny-web/jpgeneration/error/403.html
+++ b/plne-responzivny-web/jpgeneration/error/403.html
@@ -200,7 +200,7 @@
         <div class="soc-an">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/jaro.potocny" target="_blank">
+                    <a href="https://www.facebook.com/people/jpgeneration/100087779516122/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -209,7 +209,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank">
+                    <a href="https://www.instagram.com/jpgeneration/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -227,7 +227,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tel:0907112358">
+                    <a href="tel:+421907112358">
                         <span></span>
                         <span></span>
                         <span></span>
