--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -176,10 +176,10 @@
                                 <h3 class="team-title">Jaroslav Potočný</h3>
                                 <span class="span-team">Founder</span>
                                 <div class="socials">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
-                                    <a href="#"><i class="fa-regular fa-envelope"></i></a>
-                                    <a href="#"><i class="fa-solid fa-mobile-screen-button"></i></a>
+                                    <a href="https://www.facebook.com/jaro.potocny" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank"><i class="fa fa-instagram"></i></a>
+                                    <a href="mailto:info@jpgeneration.sk"><i class="fa-regular fa-envelope"></i></a>
+                                    <a href="tel:0907112358"><i class="fa-solid fa-mobile-screen-button"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -273,7 +273,7 @@
         <div class="soc-an">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/jaro.potocny" target="_blank">
+                    <a href="https://www.facebook.com/people/jpgeneration/100087779516122/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -282,7 +282,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank">
+                    <a href="https://www.instagram.com/jpgeneration/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -300,7 +300,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tel:0907112358">
+                    <a href="tel:+421907112358">
                         <span></span>
                         <span></span>
                         <span></span>
