--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -330,7 +330,7 @@
         <div class="soc-an">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/jaro.potocny" target="_blank">
+                    <a href="https://www.facebook.com/people/jpgeneration/100087779516122/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -339,7 +339,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank">
+                    <a href="https://www.instagram.com/jpgeneration/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -357,7 +357,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tel:0907112358">
+                    <a href="tel:+421907112358">
                         <span></span>
                         <span></span>
                         <span></span>
