--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -178,8 +178,8 @@
                                 <div class="socials">
                                     <a href="https://www.facebook.com/jaro.potocny" target="_blank"><i class="fa fa-facebook"></i></a>
                                     <a href="https://www.instagram.com/jaro_potocny/" target="_blank"><i class="fa fa-instagram"></i></a>
-                                    <a href="mailto:info@jpgeneration.sk"><i class="fa-regular fa-envelope"></i></a>
-                                    <a href="tel:0907112358"><i class="fa-solid fa-mobile-screen-button"></i></a>
+                                    <a href="mailto:jaroslavpotocny@icloud.com"><i class="fa-regular fa-envelope"></i></a>
+                                    <a href="tel:+421907112358"><i class="fa-solid fa-mobile-screen-button"></i></a>
                                 </div>
                             </div>
                         </div>
