--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -165,9 +165,9 @@
     <div class="con-look">
         <span>ĽUDIA KTORÝ ZREALIZUJÚ VÁŠ PROJEKT</span>
     </div>
-    <div class="container-cv">
-        <div class="row team-row">
-            <div>
+    <section class="photo-team">
+        <div class="container-cv">
+            <div class="row team-row">
                 <div class="team-member">
                     <div class="team-img">
                         <img src="../../image/about-us/founder-cover.webp" alt="">
@@ -176,9 +176,12 @@
                                 <h3 class="team-title">Jaroslav Potočný</h3>
                                 <span class="span-team">Founder</span>
                                 <div class="socials">
-                                    <a href="https://www.facebook.com/jaro.potocny" target="_blank"><i class="fa fa-facebook"></i></a>
-                                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank"><i class="fa fa-instagram"></i></a>
-                                    <a href="mailto:jaroslavpotocny@icloud.com"><i class="fa-regular fa-envelope"></i></a>
+                                    <a href="https://www.facebook.com/jaro.potocny" target="_blank"><i
+                                            class="fa fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank"><i
+                                            class="fa fa-instagram"></i></a>
+                                    <a href="mailto:jaroslavpotocny@icloud.com"><i
+                                            class="fa-regular fa-envelope"></i></a>
                                     <a href="tel:+421907112358"><i class="fa-solid fa-mobile-screen-button"></i></a>
                                 </div>
                             </div>
@@ -186,9 +189,84 @@
                     </div>
                 </div>
             </div>
-            <!-- end team member -->
+            <section class="skill-list-2">
+                <div class="container-skill-2">
+                    <!----------------1---------------->
+                    <div class="progress-bar" data-percentage="90">
+                        <div class="progress-number-mark">
+                            <div class="percent">95%</div>
+                        </div>
+                        <div class="progress-title-holder">
+                            <div class="progress-title">Creative Cloud</div>
+                        </div>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!----------------2---------------->
+                    <div class="progress-bar" data-percentage="85">
+                        <div class="progress-number-mark">
+                            <div class="percent">90%</div>
+                        </div>
+                        <div class="progress-title-holder">
+                            <div class="progress-title">Foto / video produkcia</div>
+                        </div>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!----------------3---------------->
+                    <div class="progress-bar" data-percentage="95">
+                        <div class="progress-number-mark">
+                            <div class="percent">85%</div>
+                        </div>
+                        <div class="progress-title-holder">
+                            <div class="progress-title">HTML / CSS</div>
+                        </div>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!----------------4---------------->
+                    <div class="progress-bar" data-percentage="70">
+                        <div class="progress-number-mark">
+                            <div class="percent">80%</div>
+                        </div>
+                        <div class="progress-title-holder">
+                            <div class="progress-title">WordPress</div>
+                        </div>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!----------------5---------------->
+                    <div class="progress-bar" data-percentage="60">
+                        <div class="progress-number-mark">
+                            <div class="percent">60%</div>
+                        </div>
+                        <div class="progress-title-holder">
+                            <div class="progress-title">JavaScript / jQuery</div>
+                        </div>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!----------------6---------------->
+                    <div class="progress-bar" data-percentage="50">
+                        <div class="progress-number-mark">
+                            <div class="percent">50%</div>
+                        </div>
+                        <div class="progress-title-holder">
+                            <div class="progress-title">PHP / MySQL</div>
+                        </div>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-    </div>
+    </section>
 </section>
 <br>
 <br>
@@ -333,6 +411,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script src="../../js/skill-bar.js" type="text/javascript"></script>
 </body>
 </html>
 
